assigned to username in API Gateway TaskDTO